# regista

./: .gitignore  .regista.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  HANDOFF.md  README.md
.regista/: config.toml  daemon.pid  state.toml
.regista/decisions/: 2026-05-05-dev-story-001.md  2026-05-05-reviewer-story-001.md  2026-05-06-STORY-027-implementation.md  STORY-001-developer-20260505T045049.md  STORY-001-po-refinement-20260505.md  STORY-001-po-validate-done-2026-05-05.md  STORY-001-product-owner-20260505T035109.md  STORY-001-product-owner-20260505T035114.md  STORY-001-product-owner-20260505T035158.md  STORY-001-product-owner-20260505T035407.md  STORY-001-product-owner-20260505T035640.md  STORY-001-product-owner-20260505T035804.md  STORY-001-product-owner-20260505T035907.md  STORY-001-product-owner-20260505T040153.md  STORY-001-product-owner-20260505T040331.md  STORY-001-product-owner-20260505T040354.md  STORY-001-product-owner-20260505T040406.md  STORY-001-product-owner-20260505T040526.md  STORY-001-product-owner-20260505T040552.md  STORY-001-product-owner-20260505T040756.md  STORY-001-product-owner-20260505T040959.md  STORY-001-product-owner-20260505T041105.md  STORY-001-product-owner-20260505T041309.md  STORY-001-product-owner-20260505T041406.md  STORY-001-product-owner-20260505T041555.md  STORY-001-product-owner-20260505T041632.md  (+756 more)
docs/: architecture.md  refactor-plan.md
roadmap/: 01-paralelismo.md  02-salida-json-ci-cd.md  03-dry-run.md  04-workflow-configurable.md  05-validate.md  06-init-scaffold.md  07-checkpoint-resume.md  08-feedback-agentes.md  09-prompts-agnosticos.md  10-cross-story-context.md  13-groom-generacion-historias.md  14-groom-from-dir.md  15-groom-interactive.md  20-implementacion.md  20-multi-provider.md  21-docker.md  22-plan-append.md  AUDITORIA-ESCALABILIDAD.md  ROADMAP.md
specs/: 01-cli-subcomandos-daemon.md  spec-logs-transparentes.md
src/: agent.rs  board.rs  checkpoint.rs  config.rs  daemon.rs  deadlock.rs  dependency_graph.rs  git.rs  groom.rs  hooks.rs  init.rs  main.rs  orchestrator.rs  plan.rs  prompts.rs  providers.rs  state.rs  story.rs  update.rs  validator.rs
src/app/: init.rs  (+6 more)
tests/: architecture.rs
(+62 files in other folders)
