[package]
name = "regista"
version = "0.2.0"
edition = "2021"
description = "🎬 AI agent director — state-machine-driven pipeline for pi"
license = "MIT"
repository = "https://github.com/dbareautopi/regista"
documentation = "https://github.com/dbareautopi/regista"
readme = "README.md"
keywords = ["ai", "agent", "orchestrator", "pipeline", "llm"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
regex = "1"
chrono = "0.4"
glob = "0.3"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
